Port changes to OS project